# Memo

./: .gitignore  CMakeLists.txt  README.md  ax_clion.xml  python_code.md  ubuntu_configuration  update.sh
CMake/Demo/: CMakeLists.txt
CppNotes/: README.md
cmake/Criterion/: CMakeLists.txt
cmake/Demo/: CMakeLists.txt
cmake/Eigen/: CMakeLists.txt
cmake/OpenGL/: CMakeLists.txt
cmake/OpenXX/: CMakeLists.txt
cmake/Static.a/: CMakeLists.txt
code/: Shader.h  TimerGuard.h  bibliography.bib  bibtex_sample.bib  debug.h  debug_original.h  pipe_demo.c  python_code.md  variadic.cpp
code/CMakeList/Boost/: CMakeLists.txt
code/CMakeList/CppDemo/: CMakeLists.txt
code/CMakeList/OpenXX/: CMakeLists.txt
code/CMakeList/Static.a/: CMakeLists.txt
code/CMakeLists/Boost/: CMakeLists.txt
code/CMakeLists/CGAL/: CMakeLists.txt
code/CMakeLists/CPCG/: CMakeLists.txt
code/CMakeLists/CPCG/src/cpcg/: cpcg.cu
code/CMakeLists/CPMG/: CMakeLists.txt  kernel.py  test.py
code/CMakeLists/CppDemo/: CMakeLists.txt
code/CMakeLists/CppDemo/src/: main.cpp
code/CMakeLists/Criterion/: CMakeLists.txt
code/CMakeLists/CudaDemo/: CMakeLists.txt
code/CMakeLists/CudaDemo/include/cuax/: cuax.h
code/CMakeLists/CudaDemo/include/util/: CudaUtil.h
code/CMakeLists/CudaDemo/src/: main.cu
code/CMakeLists/CudaDemo/src/cuax/: mc.cu
code/CMakeLists/CudaDemo/src/util/: cg.cu  mc.cu
code/CMakeLists/Matplot++/: CMakeLists.txt
code/CMakeLists/OpenCV/: CMakeLists.txt
code/CMakeLists/OpenGL/: CMakeLists.txt
code/CMakeLists/OpenGLDemo/: CMakeLists.txt  README.md
code/CMakeLists/OpenGLDemo3D/: CMakeLists.txt  README.md
code/CMakeLists/OpenMesh+TBB/: CMakeLists.txt
code/CMakeLists/OpenXX/: CMakeLists.txt
code/CMakeLists/PTE/: CMakeLists.txt  test.py
code/CMakeLists/PTE/src/: main.cu
code/CMakeLists/PyBinding/: CMakeLists.txt
code/CMakeLists/Qt5/: CMakeLists.txt
code/CMakeLists/Sanitizer/: CMakeLists.txt
code/CMakeLists/SurfM/: CMakeLists.txt
code/CMakeLists/Torch/: CMakeLists.txt
code/CMakeLists/Vulkan/: CMakeLists.txt
code/CMakeLists/VulkanDemo/: CMakeLists.txt
code/CPCG/: test.py
code/CPCG/src/: main.cpp
code/CPX/: CMakeLists.txt  t.py
code/CPX/include/util/: add.h  cuax.h  fun.h  pb.h  pybind11_opaque.h
code/CPX/src/: main.cpp
code/CPX/src/util/: cuax.cu  fun.cpp  pb.cpp
code/CudaDemo/: CMakeLists.txt  deviceQueryDrv.txt
code/CudaDemo/include/cuax/: CudaMatrix.h  pccg.h
code/CudaDemo/include/util/: TimerGuard.h  helper_cuda_drvapi.h  helper_string.h
code/CudaDemo/src/: main.cpp  main.cu
code/CudaDemo/src/cuax/: CudaMatrix.cu  cuax.cu  pccg.cu
code/PTE/: CMakeLists.txt  setup.py  test.py
code/Pxer+wget/: download.sh  pixiv.txt
code/PyCuda/: CMakeLists.txt
code/PyCuda/src/: main.cu
code/TimerGuard/: CMakeLists.txt
code/TimerGuard/include/util/: TimerGuard.h
code/TimerGuard/src/util/: TimerGuard.cpp
code/WSL 2/: settings.json
code/Windows Terminal/: settings.json
code/dl-bak/PatreonDownloader-AlexCSDev/: README.md  download-patreon.sh
code/dl-bak/kemono-dl-ovear/: 3.txt  dd.sh  requirements.txt  run.sh  sun.sh
code/dsa/: Trie.cpp  ssa.cpp
code/renamer/: add_fan_prefix.py  addalbumart2mp3.py  arashi.py  epub_text_replace.py  exhentai_gallary_2_pixiv.py  fanbox_unfold.py  kemono.py  ncm2mp3postprocessing.py  order.py  pixiv.py  pixiv_add_user_prefix.py  pixiv_add_user_prefix_fix_prefix.py  pixiv_add_user_prefix_no_format_check.py  pixiv_multiple.py  pixiv_old.py  rename_from_num.py  twitter.py
newsys/: README.md
notes/assembly/: assembly.md
notes/cpp/: CMakeLists.txt  boost.md  cmd_cheat_sheet.md  cpp_concurrency_in_action_notes.md  cpp_primer_5ed_notes.md  cpp_primer_notes.md  cpp_primer_notes_p1.md  cpp_primer_notes_p2.md  cpp_templates_the_complete_guide_notes.md  cpp_templates_the_complete_guide_notes_part_2.md  cpp_templates_the_complete_guide_notes_part_3.md  cuda_cpp_programming_guide.md  debugging.md  effective_cpp_notes.md  effective_cpp_notes_01_effective_cpp.md  effective_cpp_notes_02_more_effective_cpp.md  effective_cpp_notes_03_effective_stl.md  effective_cpp_notes_04_effective_modern_cpp.md  notes.md  professional_cuda_c_programming.md  professoinal_cuda_c_programming.md  translation_and_loading_toolchain.md
notes/cpp/include/: S35.h
notes/cpp/src/: main.cpp
notes/cuda/: cuda-gdb.md  cuda_cpp_programming_guide.md  nsys.md  professional_cuda_c_programming.md
notes/docker/: docker.md
notes/dsa/: 030_031_bit_operations.md  Trie.cpp  algorithmzuo.md  bit_operations.md  implementation_notes.md  implementation_notes_lc.md  implementation_notes_stl.md  kmp.cpp  morris_traversal.cpp  rolling_hash.cpp  ssa.cpp  unroll_copy.cpp
notes/dsa/LeetCode/: 0000. Problems to Recite.md  0002. Add Two Numbers.cpp  0003. Longest Substring Without Repeating Characters (Sliding Window).cpp  0003. Longest Substring Without Repeating Characters (Sliding Window, Record Leftmost Index of RR).cpp  0004. Median of Two Sorted Arrays (Bin Search on A, get corresponding median in B, compare LA RA LB RB).cpp  0005. Longest Palindromic Substring (Double End DP, Extend Both Sides).cpp  0006. Zigzag Conversion.cpp  0007. Reverse Integer (if ans Less 0.1 IntMin or 0.1IntMax Greater ans return 0).cpp  0008. String to Integer (atoi).cpp  0020. Valid Parentheses (Stack).cpp  (+487 more)
notes/git-notes/: git-notes.md
notes/misc/: photoshop.md
notes/paper/: 3dgs.ipynb
notes/powershell/: powershell.md
notes/ps/: photoshop.md
notes/py/: matplotlib.md  numpy.md  py.md  pytorch.md  sympy.md
notes/system/: 01-system-installation.md  02-system-configuration.md  03-environment-configuration.md  04-system-management.md  05-system-programming.md  05-windows.md  05-wsl-2.md  06-macos.md  07-macosx.md  07-shortcuts.md  99-DEPRECATED.md
notes/ubuntu/: 01-system-installation.md  02-system-configuration.md  03-environment-configuration.md  04-system-management.md  05-system-programming.md  05-wsl-2.md  environment configuration.md  system configuration.md  system installation.md  system management.md
preferences/: ax_idea.xml
ubuntu/: README.md
(+81 files in other folders)
